@@ -4,6 +4,7 @@ NSD RELEASE NOTES
 ================
 FEATURES:
 	- When tcp is more than half full, use short timeout for tcp session.
+	- Patch for {max,min}-{refresh,retry}-time from YAMAGUCHI Takanori.
 BUG FIXES:
 	- Fix build without IPv6, patch from Zdenek Kaspar.
 
